made corrections thta Mr. Henshaw requested

--- a/index.html
+++ b/index.html
@@ -40,8 +40,32 @@
                         <ul class="details">
                             <li><h4>Mr. Anietie Antia</h4></li>
                             <li><a href="tel:+234.806.612.5576">+234 806 612 5576</a></li>
-                            <li><a href="">anietie@sedekdoors.com</a></li>
+                            <!--<li><a href="">anietie@sedekdoors.com</a></li>-->
                             <li><a href="">Calabar</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="person">
+                        <div class="contact-image">
+                            <img src="img/staff_lag.jpg" alt="">
+                        </div>
+                        <ul class="details">
+                            <li><h4>Mr. Uche Chima</h4></li>
+                            <li><a href="tel:+234.706.892.0523">+234 706 892 0523</a></li>
+                            <!--<li><a href="">uche.chima@sedekdoors.com</a></li>-->
+                            <li><a href="">Lagos</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="person">
+                        <div class="contact-image">
+                            <img src="img/staff_ph.jpg" alt="">
+                        </div>
+                        <ul class="details">
+                            <li><h4>Mr. Brown Sunday</h4></li>
+                            <li><a href="tel:+234.706.713.6214">+234 706 713 6214</a></li>
+                            <!--<li><a href="">uche.chima@sedekdoors.com</a></li>-->
+                            <li><a href="">Lagos</a></li>
                         </ul>
                     </div>
                 </div>
@@ -75,7 +99,7 @@
             </div>
 
             <div class="product-image">
-                <img src="img/molded_1.png" alt="">
+                <img src="img/molded_panel.png" alt="">
             </div>
 
             <!-- Molded Panel Doors Modal -->
@@ -87,13 +111,28 @@
 
                 <div class="modal-images">
                     <div class="molded-Slides fade">
-                        <img src="img/molded_3.png" alt="">
+                        <img src="img/molded_1.jpg" alt="">
                     </div>
                     <div class="molded-Slides fade">
-                        <img src="img/molded_2.png" alt="">
+                        <img src="img/molded_2.jpg" alt="">
                     </div>
                     <div class="molded-Slides fade">
-                        <img src="img/molded_1.png" alt="">
+                        <img src="img/molded_3.jpg" alt="">
+                    </div>
+                    <div class="molded-Slides fade">
+                        <img src="img/molded_4.jpg" alt="">
+                    </div>
+                    <div class="molded-Slides fade">
+                        <img src="img/molded_5.jpg" alt="">
+                    </div>
+                    <div class="molded-Slides fade">
+                        <img src="img/molded_6.jpg" alt="">
+                    </div>
+                    <div class="molded-Slides fade">
+                        <img src="img/molded_7.jpg" alt="">
+                    </div>
+                    <div class="molded-Slides fade">
+                        <img src="img/molded_8.png" alt="">
                     </div>
 
                     <!-- Next and Previous Buttons -->
@@ -167,13 +206,25 @@
 
                 <div class="modal-images">
                     <div class="glass-slides fade">
-                        <img src="img/glass_insert_1.png" alt="">
+                        <img src="img/glass_1.jpg" alt="">
                     </div>
                     <div class="glass-slides fade">
-                        <img src="img/glass_insert_2.png" alt="">
+                        <img src="img/glass_2.jpg" alt="">
                     </div>
                     <div class="glass-slides fade">
-                        <img src="img/glass_insert_3.png" alt="">
+                        <img src="img/glass_3.jpg" alt="">
+                    </div>
+                    <div class="glass-slides fade">
+                        <img src="img/glass_4.jpg" alt="">
+                    </div>
+                    <div class="glass-slides fade">
+                        <img src="img/glass_5.jpg" alt="">
+                    </div>
+                    <div class="glass-slides fade">
+                        <img src="img/glass_6.jpg" alt="">
+                    </div>
+                    <div class="glass-slides fade">
+                        <img src="img/glass_7.png" alt="">
                     </div>
 
                     <!-- Next and Previous Buttons -->
@@ -195,7 +246,7 @@
             </div>
 
             <div class="product-image">
-                <img src="img/planate_door.png" alt="">
+                <img src="img/planate.jpeg" alt="">
             </div>
 
             <!-- Planate Doors Modal -->
@@ -207,13 +258,25 @@
 
                 <div class="modal-images">
                     <div class="planate-Slides fade">
-                        <img src="img/planate_1.png" alt="">
+                        <img src="img/planate_2.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/planate_3.png" alt="">
+                        <img src="img/planate_3.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/planate_2.png" alt="">
+                        <img src="img/planate_1.jpg" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
+                        <img src="img/planate_4.jpg" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
+                        <img src="img/planate_5.jpg" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
+                        <img src="img/planate_6.jpg" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
+                        <img src="img/planate_7.jpg" alt="">
                     </div>
 
                     <!-- Next and Previous Buttons -->
@@ -237,39 +300,28 @@
                 <img src="img/double_door.jpeg" alt="">
             </div>
             <div class="g-img">
-                <img src="img/planate_2.png" alt="">
+                <img src="img/planate.jpeg" alt="">
             </div>
             <div class="g-img">
                 <img src="img/double_door_2.png" alt="">
             </div>
             <div class="g-img">
-                <img src="img/double_door_1.jpeg" alt="">
+                <img src="img/planate_3.jpg" alt="">
             </div>
-
-            <p id="more" class="more">View more</p>
-
-            <div class="img-cont" id="more-images">
+            <div class="xs-device">
                 <div class="g-img">
-                    <img src="img/glass_insert_2.png" alt="">
+                    <img src="img/glass_5.jpg" alt="">
                 </div>
                 <div class="g-img">
-                    <img src="img/glass_insert_3.png" alt="">
+                    <img src="img/glass_2.jpg" alt="">
                 </div>
                     <div class="g-img">
-                    <img src="img/planate_3.png" alt="">
+                    <img src="img/molded_5.jpg" alt="">
                 </div>
                 <div class="g-img">
-                        <img src="img/molded_1.png" alt="">
-                </div>
-                <div class="g-img">
-                    <img src="img/molded_8.png" alt="">
-                </div>
-                <div class="g-img">
-                    <img src="img/double_door.jpeg" alt="">
+                        <img src="img/molded_2.jpg" alt="">
                 </div>
             </div>
-            
-            <p id="less" class="less">View less</p>
         </div>
     </div>
 
