made corrections thta Mr. Henshaw requested

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 
                     <!-- Next and Previous Buttons -->
                     <div class="modal-controls">
-                        <a class="molded-prev">&#10094;</a>
-                        <a class="molded-next">&#10095;</a>
+                        <a class="molded-prev direction">&#10094;</a>
+                        <a class="molded-next direction">&#10095;</a>
                     </div>
                 </div>
             </div>
