corrected to mobile version option

--- a/index.html
+++ b/index.html
@@ -267,6 +267,9 @@
                         <img src="img/planate_1.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
+                        <img src="img/planate_8.png" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
                         <img src="img/planate_4.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
@@ -300,7 +303,7 @@
                 <img src="img/double_door.jpeg" alt="">
             </div>
             <div class="g-img">
-                <img src="img/planate.jpeg" alt="">
+                <img src="img/planate_8.png" alt="">
             </div>
             <div class="g-img">
                 <img src="img/double_door_2.png" alt="">
