--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <img src="img/glass_5.jpg" alt="">
                     </div>
                     <div class="glass-slides fade">
-                        <img src="img/glass_6.jpg" alt="">
+                        <img src="img/glass_6.png" alt="">
                     </div>
                     <div class="glass-slides fade">
                         <img src="img/glass_7.png" alt="">
