--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                 <div class="modal-images">
                     <div class="glass-slides fade">
-                        <img src="img/glass_1.jpg" alt="">
+                        <img src="img/glass.png" alt="">
                     </div>
                     <div class="glass-slides fade">
                         <img src="img/glass_2.jpg" alt="">
@@ -215,10 +215,13 @@
                         <img src="img/glass_3.jpg" alt="">
                     </div>
                     <div class="glass-slides fade">
+                        <img src="img/glass_5.jpg" alt="">
+                    </div>
+                    <div class="glass-slides fade">
                         <img src="img/glass_4.jpg" alt="">
                     </div>
                     <div class="glass-slides fade">
-                        <img src="img/glass_5.jpg" alt="">
+                        <img src="img/glass_1.jpg" alt="">
                     </div>
                     <div class="glass-slides fade">
                         <img src="img/glass_6.png" alt="">
@@ -322,7 +325,7 @@
                     <img src="img/molded_5.jpg" alt="">
                 </div>
                 <div class="g-img">
-                        <img src="img/molded_2.jpg" alt="">
+                        <img src="img/glass.png" alt="">
                 </div>
             </div>
         </div>
