--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
                         <img src="img/explore/double_doors/IMG_1116 Enterance Door - Edited.jpg" alt="">
                     </div>
                     <div class="double-slides fade">
+                        <img src="img/explore/double_doors/double_door_2.png" alt="">
+                    </div>
+                    <div class="double-slides fade">
                         <img src="img/explore/double_doors/IMG_1092 Odere Palour entrance.jpg" alt="">
                     </div>
                     <div class="double-slides fade">
@@ -198,6 +201,9 @@
                 </div>
 
                 <div class="modal-images">
+                    <div class="glass-slides fade">
+                        <img src="img/explore/glass_insert/glass.png" alt="">
+                    </div>
                     <div class="glass-slides fade">
                         <img src="img/explore/glass_insert/Living room  with one single leaf interior  flush door without glass insert. The door should be bold to view.jpg" alt="">
                     </div>
@@ -254,37 +260,43 @@
 
                 <div class="modal-images">
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/IMG-20240723-WA0005 - Edited - Edited.jpg" alt="">
+                        <img src="img/explore/planate_doors/planate_1.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/IMG_2139 (2).jpg" alt="">
+                        <img src="img/explore/planate_doors/planate_2.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/IMG-20240723-WA0004 - Edited.jpg" alt="">
+                        <img src="img/explore/planate_doors/planate_3.png" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/flush door array.jpg" alt="">
+                        <img src="img/explore/planate_doors/planate_4.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/20221024_162144 - Edited.jpg" alt="">
+                        <img src="img/explore/planate_doors/planate_5.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/Planate series regular - Edited - Edited.jpg" alt="">
+                        <img src="img/explore/planate_doors/planate_6.png" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/IMG-20240723-WA0007 - Edited.jpg" alt="">
+                        <img src="img/explore/planate_doors/planate_7.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/planate Series Wood Grain.png" alt="">
+                        <img src="img/explore/planate_doors/planate_8.png" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/1.png" alt="">
+                        <img src="img/explore/planate_doors/planate_9.png" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/2.png" alt="">
+                        <img src="img/explore/planate_doors/planate_10.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/0a94263f59629033 - Edited.jpg" alt="">
+                        <img src="img/explore/planate_doors/planate_11.jpg" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
+                        <img src="img/explore/planate_doors/planate_12.jpg" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
+                        <img src="img/explore/planate_doors/planate_13.jpg" alt="">
                     </div>
             
             
@@ -310,26 +322,26 @@
                 <img src="img/double_door.jpeg" alt="">
             </div>
             <div class="g-img">
-                <img src="img/explore/1.png" alt="">
+                <img src="img/explore/gallery/1.png" alt="">
             </div>
             <div class="g-img">
-                <img src="img/explore/2.jpg" alt="">
+                <img src="img/explore/gallery/2.jpg" alt="">
             </div>
             <div class="g-img">
-                <img src="img/explore/3.jpg" alt="">
+                <img src="img/explore/gallery/3.jpg" alt="">
             </div>
             <div class="xs-device">
                 <div class="g-img">
-                    <img src="img/explore/4.jpg" alt="">
+                    <img src="img/explore/gallery/4.jpg" alt="">
                 </div>
                 <div class="g-img">
-                    <img src="img/explore/5.jpg" alt="">
+                    <img src="img/explore/gallery/5.jpg" alt="">
                 </div>
                     <div class="g-img">
-                    <img src="img/explore/6.jpg" alt="">
+                    <img src="img/explore/gallery/6.jpg" alt="">
                 </div>
                 <div class="g-img">
-                        <img src="img/explore/7.png" alt="">
+                        <img src="img/explore/gallery/7.png" alt="">
                 </div>
             </div>
         </div>
