--- a/index.html
+++ b/index.html
@@ -263,9 +263,6 @@
                         <img src="img/explore/planate_doors/planate_1.jpg" alt="">
                     </div>
                     <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/planate_2.jpg" alt="">
-                    </div>
-                    <div class="planate-Slides fade">
                         <img src="img/explore/planate_doors/planate_3.png" alt="">
                     </div>
                     <div class="planate-Slides fade">
@@ -282,9 +279,6 @@
                     </div>
                     <div class="planate-Slides fade">
                         <img src="img/explore/planate_doors/planate_8.png" alt="">
-                    </div>
-                    <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/planate_9.png" alt="">
                     </div>
                     <div class="planate-Slides fade">
                         <img src="img/explore/planate_doors/planate_10.jpg" alt="">
@@ -322,26 +316,26 @@
                 <img src="img/double_door.jpeg" alt="">
             </div>
             <div class="g-img">
-                <img src="img/explore/gallery/1.png" alt="">
+                <img src="img/gallery/1.png" alt="">
             </div>
             <div class="g-img">
-                <img src="img/explore/gallery/2.jpg" alt="">
+                <img src="img/gallery/2.jpg" alt="">
             </div>
             <div class="g-img">
-                <img src="img/explore/gallery/3.jpg" alt="">
+                <img src="img/gallery/3.jpg" alt="">
             </div>
             <div class="xs-device">
                 <div class="g-img">
-                    <img src="img/explore/gallery/4.jpg" alt="">
+                    <img src="img/gallery/4.jpg" alt="">
                 </div>
                 <div class="g-img">
-                    <img src="img/explore/gallery/5.jpg" alt="">
+                    <img src="img/gallery/5.jpg" alt="">
                 </div>
                     <div class="g-img">
-                    <img src="img/explore/gallery/6.jpg" alt="">
+                    <img src="img/gallery/6.jpg" alt="">
                 </div>
                 <div class="g-img">
-                        <img src="img/explore/gallery/7.png" alt="">
+                    <img src="img/gallery/7.png" alt="">
                 </div>
             </div>
         </div>
