--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <li><h4>Mr. Brown Sunday</h4></li>
                             <li><a href="tel:+234.706.713.6214">+234 706 713 6214</a></li>
                             <!--<li><a href="">uche.chima@sedekdoors.com</a></li>-->
-                            <li><a href="">Lagos</a></li>
+                            <li><a href="">Port Harcourt</a></li>
                         </ul>
                     </div>
                 </div>
