--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
                     <div class="molded-Slides fade"><img src="img/explore/molded_panel_doors/8.jpg" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/explore/molded_panel_doors/10.jpg" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/explore/molded_panel_doors/One Panel  Mahogany - Edited.jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/explore/molded_panel_doors/sedek green hood color.png" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/explore/molded_panel_doors/WP_20161124_002[1027].jpg" alt="" /></div>
                     
 
@@ -259,6 +258,9 @@
                 </div>
 
                 <div class="modal-images">
+                    <div class="planate-Slides fade">
+                        <img src="img/explore/planate_doors/planate_door.png" alt="">
+                    </div>
                     <div class="planate-Slides fade">
                         <img src="img/explore/planate_doors/planate_1.jpg" alt="">
                     </div>
