--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 </div>
 
                 <div class="modal-images">
+                    <div class="molded-Slides fade"><img src="img/explore/planate_doors/planate_door.png" alt=""></div>
                     <div class="molded-Slides fade"><img src="img/explore/molded_panel_doors/2 Panel Arch White - Edited.jpg" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/explore/molded_panel_doors/6 Panel White Matt - Edited - Edited - Edited.jpg" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/explore/molded_panel_doors/IMG_1107.JPG Odere vistors toilet.jpg" alt="" /></div>
@@ -258,9 +259,6 @@
                 </div>
 
                 <div class="modal-images">
-                    <div class="planate-Slides fade">
-                        <img src="img/explore/planate_doors/planate_door.png" alt="">
-                    </div>
                     <div class="planate-Slides fade">
                         <img src="img/explore/planate_doors/planate_1.jpg" alt="">
                     </div>
