part of images changed

--- a/index.html
+++ b/index.html
@@ -111,19 +111,19 @@
 
                 <div class="modal-images">
                     <div class="molded-Slides fade"><img src="img/planate_door.png" alt=""></div>
-                    <div class="molded-Slides fade"><img src="img/2 Panel Arch White - Edited.jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/6 Panel White Matt - Edited - Edited - Edited.jpg" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/2 Panel Arch White - Edited.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/6 Panel White Matt - Edited - Edited - Edited.webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/IMG_1107.JPG Odere vistors toilet.jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/2 Panel Arch Glossy .png.jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/20190509_163424 (1).jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/3.jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/3 Panel Oval Executive Matt.png" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/2 Panel Arch Glossy White.png" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/3 panel Oval green hood  - Edited.png" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/3 Panel Oval Mahogany - Edited.jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/6 Panel Polyurethane White - Edited.jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/8.jpg" alt="" /></div>
-                    <div class="molded-Slides fade"><img src="img/10.jpg" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/2 Panel Arch Glossy.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/20190509_163424 (1).webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/3.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/3 Panel Oval Executive Matt.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/2 Panel Arch Glossy White.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/3 panel Oval green hood  - Edited.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/3 Panel Oval Mahogany - Edited.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/6 Panel Polyurethane White - Edited.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/8.webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/10.webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/One Panel  Mahogany - Edited.jpg" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/WP_20161124_002[1027].jpg" alt="" /></div>
                     
@@ -162,7 +162,7 @@
                         <img src="img/IMG_1116 Enterance Door - Edited.jpg" alt="">
                     </div>
                     <div class="double-slides fade">
-                        <img src="img/double_door_2.png" alt="">
+                        <img src="img/double_door_2.webp" alt="">
                     </div>
                     <div class="double-slides fade">
                         <img src="img/IMG_1092 Odere Palour entrance.jpg" alt="">
@@ -208,7 +208,7 @@
                         <img src="img/Living room  with one single leaf interior  flush door without glass insert. The door should be bold to view.jpg" alt="">
                     </div>
                     <div class="glass-slides fade">
-                        <img src="img/20170707_104500 (2).jpg" alt="">
+                        <img src="img/20170707_104500 (2).webp" alt="">
                     </div>
                     <div class="glass-slides fade">
                         <img src="img/IMG-20190505-WA0010.jpg" alt="">
@@ -220,7 +220,7 @@
                         <img src="img/IMG-20190505-WA0001.jpg" alt="">
                     </div>
                     <div class="glass-slides fade">
-                        <img src="img/6 - Edited.jpg" alt="">
+                        <img src="img/6 - Edited.webp" alt="">
                     </div>
                     <div class="glass-slides fade">
                         <img src="img/Gallery 6.png" alt="">
